--- a/test.html
+++ b/test.html
@@ -3,8 +3,8 @@
 <head>
 
 <title>QUIZ TIME!!</title>
-<link href ="Notepad++" rel ="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link href ="style.css" rel ="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <script src = "main.js"></script>
 
 </head>
@@ -60,6 +60,7 @@
 </form>
 
 <div id = "after_submit">
+<p id = "message"></p>
 <p id = "number_correct"></p>
 <p id = "message"></p>
 <img id = "picture">
@@ -67,6 +68,5 @@
 </html>
 
 </body>
-
 
 
